# DuckLens

./: .env.example  .gitignore  .pre-commit-config.yaml  10_YEAR_BACKTEST_GUIDE.md  BACKTEST_README.md  CHART_USAGE.md  DAILY_TRADING_ROUTINE.md  DAILY_WORKFLOW.md  DATA_CHECKER_GUIDE.md  EARNINGS_SETUP.md  ECONOMIC_DATA_GUIDE.md  ENHANCED_TICKERS.md  FIDELITY_401K_SIMPLE_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  IMPROVE_ACCURACY.md  INDICATORS_GUIDE.md  INTRADAY_MONITOR_FIXED.md  MARKET_DATA_GUIDE.md  ML_SYSTEM_COMPLETE.md  NEW_FEATURES_SUMMARY.md  NEW_TICKERS_SUMMARY.md  OPTIONS_AGGREGATES_SOLUTION.md  OPTIONS_FLOW_COMPLETE.md  OPTIONS_FLOW_GUIDE.md  OPTIONS_FLOW_PROGRESS.md  OPTIONS_HISTORICAL_ISSUE.md  PATTERN_ANALYSIS_READY.md  PHASE1_IMPROVEMENTS_SUMMARY.md  PORTFOLIO_SIZING_30K.md  QUICK_START_TRADING.md  README.md  RELATIVE_STRENGTH_COMPLETE.md  RISK_REWARD_ANALYSIS.md  SAFE_LARGE_CAP_ADDITIONS.py  SIMPLE_START_GUIDE.md  STRATEGY_FEATURES_EXPLAINED.md  TECH_STOCKS_STATUS.md  TICKER_ANALYSIS.md  TIER1_UPGRADE_SUMMARY.md  (+17 more)
.claude/: settings.local.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
config/: backtest_strategy.yaml  backtest_strategy_ml.yaml  strategy_bullish_only.yaml  strategy_buy_and_hold_spy.yaml  strategy_high_conviction.yaml
data/: morning_signals.json  portfolio.json  trade_journal.json
docs/: EARNINGS_API_OPTIMIZATION.md  EARNINGS_AUTO_RETRY.md  MARKET_CHECK_IMPROVEMENTS.md  MIGRATION_TO_UNIFIED.md  PORTFOLIO_OPTIMIZATION.md  UNDERSTANDING_SIGNAL_CHANGES.md  UNIFIED_MARKET_CHECK.md
scripts/: account_health.py  add_100_growth_stocks.py  add_ticker.py  add_trade.py  analyze_manual_trades.py  analyze_trades.py  backtest_10_years_all.py  backtest_all_watchlist.py  backtest_configurable.py  backtest_ml_enhanced.py  backtest_stocks.py  backtest_to_1m.py  (+58 more)
(+71 files in other folders)
